--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -67,9 +67,9 @@
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Addon_RobustMCPBridge_statusbar.png&amp;filetimestamp=20260111011608&amp;.html" class="mw-file-description" title="Robust MCP Bridge workbench statusbar"><img alt="Robust MCP Bridge workbench statusbar" src="../File/Addon_RobustMCPBridge_statusbar.png" decoding="async" width="396" height="86" class="mw-file-element" data-file-width="396" data-file-height="86"></a></span>
 </p>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Headless_Mode">Headless Mode</span></h3>
-</div>
+<p><span id="Headless_Mode"></span>
+</p>
+<h3><span class="mw-headline" id="Kopfloser_Modus">Kopfloser Modus</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>For automation and CI/CD pipelines, the bridge can run without the GUI:
 </p>
@@ -231,12 +231,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260113201300
+Cached time: 20260113201317
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.039 seconds
-Real time usage: 0.051 seconds
+CPU time usage: 0.041 seconds
+Real time usage: 0.054 seconds
 Preprocessor visited node count: 241/1000000
 Post&#8208;expand include size: 2245/2097152 bytes
 Template argument size: 748/2097152 bytes
@@ -247,16 +247,16 @@ Unstrip post&#8208;expand size: 3285/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.325      1 -total
- 23.88%    2.226      4 Template:Code
- 22.72%    2.119      5 Template:Incode
- 11.57%    1.079      4 Template:MenuCommand
- 10.53%    0.982      3 Template:Button
- 10.37%    0.967      3 Template:FileName
-  9.66%    0.901      1 Template:TOCright
+100.00%   11.365      1 -total
+ 21.25%    2.415      4 Template:Code
+ 18.03%    2.049      3 Template:FileName
+ 13.97%    1.588      5 Template:Incode
+ 13.44%    1.527      1 Template:TOCright
+ 11.62%    1.321      4 Template:MenuCommand
+ 10.86%    1.234      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113201300 and revision id 1738049. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113201317 and revision id 1738051. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
