--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -83,11 +83,8 @@
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="o">/</span><span class="n">Applications</span><span class="o">/</span><span class="n">FreeCAD</span><span class="o">.</span><span class="n">app</span><span class="o">/</span><span class="n">Contents</span><span class="o">/</span><span class="n">Resources</span><span class="o">/</span><span class="nb">bin</span><span class="o">/</span><span class="n">freecadcmd</span> \
     <span class="o">~/</span><span class="n">Library</span><span class="o">/</span><span class="n">Application</span>\ <span class="n">Support</span><span class="o">/</span><span class="n">FreeCAD</span><span class="o">/</span><span class="n">Mod</span><span class="o">/</span><span class="n">FreecadRobustMCPBridge</span><span class="o">/</span><span class="n">freecad_mcp_bridge</span><span class="o">/</span><span class="n">blocking_bridge</span><span class="o">.</span><span class="n">py</span>
 </pre></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The bridge will start and keep FreeCAD running until you press Ctrl+C.
-</p>
-</div>
-<p><span id="Configuration"></span>
+<p>Die Br&uuml;cke startet und h&auml;lt FreeCAD am Laufen, bis Strg+C gedr&uuml;ckt wird.
+</p><p><span id="Configuration"></span>
 </p>
 <h2><span class="mw-headline" id="Konfiguration">Konfiguration</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -231,13 +228,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260113201317
+Cached time: 20260113201338
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.041 seconds
+CPU time usage: 0.042 seconds
 Real time usage: 0.054 seconds
-Preprocessor visited node count: 241/1000000
+Preprocessor visited node count: 240/1000000
 Post&#8208;expand include size: 2245/2097152 bytes
 Template argument size: 748/2097152 bytes
 Highest expansion depth: 4/100
@@ -247,16 +244,16 @@ Unstrip post&#8208;expand size: 3285/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.365      1 -total
- 21.25%    2.415      4 Template:Code
- 18.03%    2.049      3 Template:FileName
- 13.97%    1.588      5 Template:Incode
- 13.44%    1.527      1 Template:TOCright
- 11.62%    1.321      4 Template:MenuCommand
- 10.86%    1.234      3 Template:Button
+100.00%   11.681      1 -total
+ 27.16%    3.173      4 Template:Code
+ 15.69%    1.833      3 Template:FileName
+ 14.65%    1.711      3 Template:Button
+ 11.74%    1.372      4 Template:MenuCommand
+ 10.02%    1.171      5 Template:Incode
+  8.69%    1.015      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113201317 and revision id 1738051. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113201338 and revision id 1738053. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
