--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -221,20 +221,18 @@
 <p><span id="Links"></span>
 </p>
 <h2><span class="mw-headline" id="Verweise">Verweise</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">GitHub Repository</a> - Source code, documentation, and issue tracker.</li>
-<li><a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP Server on PyPI</a> - The MCP client that connects to this bridge.</li>
-<li><a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol</a> - The protocol specification.</li></ul>
-</div>
+<ul><li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">GitHub-Repository</a> - Quellcode, Dokumentation und Problemverfolgung (Issue Tracker).</li>
+<li><a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP Server auf PyPI</a> - Der MCP-Client, der eine Verbindung zu dieser Br&uuml;cke (Bridge) herstellt.</li>
+<li><a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol</a> - Die Protokollspezifikation.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113201338
+Cached time: 20260113201449
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.042 seconds
-Real time usage: 0.054 seconds
-Preprocessor visited node count: 240/1000000
+CPU time usage: 0.046 seconds
+Real time usage: 0.059 seconds
+Preprocessor visited node count: 239/1000000
 Post&#8208;expand include size: 2245/2097152 bytes
 Template argument size: 748/2097152 bytes
 Highest expansion depth: 4/100
@@ -244,16 +242,16 @@ Unstrip post&#8208;expand size: 3285/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.681      1 -total
- 27.16%    3.173      4 Template:Code
- 15.69%    1.833      3 Template:FileName
- 14.65%    1.711      3 Template:Button
- 11.74%    1.372      4 Template:MenuCommand
- 10.02%    1.171      5 Template:Incode
-  8.69%    1.015      1 Template:TOCright
+100.00%   10.549      1 -total
+ 21.45%    2.263      4 Template:Code
+ 14.69%    1.549      3 Template:FileName
+ 14.19%    1.497      5 Template:Incode
+ 13.13%    1.385      4 Template:MenuCommand
+ 13.06%    1.378      1 Template:TOCright
+ 12.49%    1.318      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113201338 and revision id 1738053. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113201449 and revision id 1738055. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
