--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -63,11 +63,8 @@
 <p>To stop the bridge, click <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Stop Bridge</span> in the toolbar.
 </p>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Addon_RobustMCPBridge_statusbar.png&amp;filetimestamp=20260111011608&amp;.html" class="mw-file-description" title="Robust MCP Bridge workbench statusbar"><img alt="Robust MCP Bridge workbench statusbar" src="../File/Addon_RobustMCPBridge_statusbar.png" decoding="async" width="396" height="86" class="mw-file-element" data-file-width="396" data-file-height="86"></a></span>
-</p>
-</div>
-<p><span id="Headless_Mode"></span>
+<p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Addon_RobustMCPBridge_statusbar.png&amp;filetimestamp=20260111011608&amp;.html" class="mw-file-description" title="Statusleiste des Arbeitsbereichs Robust MCP Bridge"><img alt="Statusleiste des Arbeitsbereichs Robust MCP Bridge" src="../File/Addon_RobustMCPBridge_statusbar.png" decoding="async" width="396" height="86" class="mw-file-element" data-file-width="396" data-file-height="86"></a></span>
+</p><p><span id="Headless_Mode"></span>
 </p>
 <h3><span class="mw-headline" id="Kopfloser_Modus">Kopfloser Modus</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -226,13 +223,13 @@
 <li><a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol</a> - Die Protokollspezifikation.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113201449
+Cached time: 20260113201810
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.046 seconds
-Real time usage: 0.059 seconds
-Preprocessor visited node count: 239/1000000
+CPU time usage: 0.043 seconds
+Real time usage: 0.056 seconds
+Preprocessor visited node count: 238/1000000
 Post&#8208;expand include size: 2245/2097152 bytes
 Template argument size: 748/2097152 bytes
 Highest expansion depth: 4/100
@@ -242,16 +239,16 @@ Unstrip post&#8208;expand size: 3285/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.549      1 -total
- 21.45%    2.263      4 Template:Code
- 14.69%    1.549      3 Template:FileName
- 14.19%    1.497      5 Template:Incode
- 13.13%    1.385      4 Template:MenuCommand
- 13.06%    1.378      1 Template:TOCright
- 12.49%    1.318      3 Template:Button
+100.00%    9.670      1 -total
+ 23.83%    2.305      4 Template:Code
+ 14.22%    1.375      4 Template:MenuCommand
+ 14.19%    1.372      3 Template:Button
+ 13.46%    1.301      5 Template:Incode
+ 12.47%    1.206      1 Template:TOCright
+ 11.12%    1.075      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113201449 and revision id 1738055. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113201810 and revision id 1738057. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
