--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -116,11 +116,8 @@
 <td>9876
 </td></tr></tbody></table>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p><span typeof="mw:File"><a href="../index.php?title=Addon_RobustMCPBridge_preferences.png&amp;filetimestamp=20260111061341&amp;.html" class="mw-file-description" title="Robust MCP Bridge workbench preference pane"><img alt="Robust MCP Bridge workbench preference pane" src="../File/Addon_RobustMCPBridge_preferences.png" decoding="async" width="800" height="598" class="mw-file-element" data-file-width="1790" data-file-height="1338"></a></span>
-</p>
-</div>
-<p><span id="Features_by_Mode"></span>
+<p><span typeof="mw:File"><a href="../index.php?title=Addon_RobustMCPBridge_preferences.png&amp;filetimestamp=20260111061341&amp;.html" class="mw-file-description" title="Einstellungsfenster des Arbeitsbereichs Robust MCP Bridge"><img alt="Einstellungsfenster des Arbeitsbereichs Robust MCP Bridge" src="../File/Addon_RobustMCPBridge_preferences.png" decoding="async" width="800" height="598" class="mw-file-element" data-file-width="1790" data-file-height="1338"></a></span>
+</p><p><span id="Features_by_Mode"></span>
 </p>
 <h2><span class="mw-headline" id="Funktionen_nach_Modus">Funktionen nach Modus</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -223,13 +220,13 @@
 <li><a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol</a> - Die Protokollspezifikation.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113201810
+Cached time: 20260113201907
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.043 seconds
-Real time usage: 0.056 seconds
-Preprocessor visited node count: 238/1000000
+CPU time usage: 0.044 seconds
+Real time usage: 0.065 seconds
+Preprocessor visited node count: 237/1000000
 Post&#8208;expand include size: 2245/2097152 bytes
 Template argument size: 748/2097152 bytes
 Highest expansion depth: 4/100
@@ -239,16 +236,16 @@ Unstrip post&#8208;expand size: 3285/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.670      1 -total
- 23.83%    2.305      4 Template:Code
- 14.22%    1.375      4 Template:MenuCommand
- 14.19%    1.372      3 Template:Button
- 13.46%    1.301      5 Template:Incode
- 12.47%    1.206      1 Template:TOCright
- 11.12%    1.075      3 Template:FileName
+100.00%   13.403      1 -total
+ 22.58%    3.027      4 Template:Code
+ 15.25%    2.044      3 Template:FileName
+ 13.24%    1.775      1 Template:TOCright
+ 13.19%    1.768      4 Template:MenuCommand
+ 13.12%    1.759      3 Template:Button
+ 11.62%    1.558      5 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113201810 and revision id 1738057. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113201907 and revision id 1738059. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
