--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -181,11 +181,8 @@
 </p>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">uv</span> <span class="n">tool</span> <span class="n">install</span> <span class="n">freecad</span><span class="o">-</span><span class="n">robust</span><span class="o">-</span><span class="n">mcp</span>
 </pre></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>See the <a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">GitHub repository</a> for full documentation on configuring MCP clients.
-</p>
-</div>
-<p><span id="Troubleshooting"></span>
+<p>Die vollst&auml;ndige Dokumentation zur Konfiguration von MCP-Clients ist im <a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">GitHub-Repository</a> zu finden.
+</p><p><span id="Troubleshooting"></span>
 </p>
 <h2><span class="mw-headline" id="Fehlerbehebung">Fehlerbehebung</span></h2>
 <p><span id="Bridge_Won't_Start"></span>
@@ -220,13 +217,13 @@
 <li><a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol</a> - Die Protokollspezifikation.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113201907
+Cached time: 20260113201951
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.044 seconds
-Real time usage: 0.065 seconds
-Preprocessor visited node count: 237/1000000
+CPU time usage: 0.038 seconds
+Real time usage: 0.051 seconds
+Preprocessor visited node count: 236/1000000
 Post&#8208;expand include size: 2245/2097152 bytes
 Template argument size: 748/2097152 bytes
 Highest expansion depth: 4/100
@@ -236,16 +233,16 @@ Unstrip post&#8208;expand size: 3285/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.403      1 -total
- 22.58%    3.027      4 Template:Code
- 15.25%    2.044      3 Template:FileName
- 13.24%    1.775      1 Template:TOCright
- 13.19%    1.768      4 Template:MenuCommand
- 13.12%    1.759      3 Template:Button
- 11.62%    1.558      5 Template:Incode
+100.00%    9.384      1 -total
+ 22.67%    2.127      4 Template:Code
+ 15.69%    1.473      5 Template:Incode
+ 14.51%    1.362      3 Template:Button
+ 14.16%    1.329      1 Template:TOCright
+ 11.83%    1.110      4 Template:MenuCommand
+ 10.82%    1.015      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113201907 and revision id 1738059. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113201951 and revision id 1738061. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
