--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -59,11 +59,8 @@
 <li>The status indicator turns green when running</li>
 <li>External MCP clients can now connect to localhost:9875 (XML-RPC) or localhost:9876 (Socket)</li></ol>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>To stop the bridge, click <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Stop Bridge</span> in the toolbar.
-</p>
-</div>
-<p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Addon_RobustMCPBridge_statusbar.png&amp;filetimestamp=20260111011608&amp;.html" class="mw-file-description" title="Statusleiste des Arbeitsbereichs Robust MCP Bridge"><img alt="Statusleiste des Arbeitsbereichs Robust MCP Bridge" src="../File/Addon_RobustMCPBridge_statusbar.png" decoding="async" width="396" height="86" class="mw-file-element" data-file-width="396" data-file-height="86"></a></span>
+<p>Um die Br&uuml;cke (Bridge) zu stoppen, in der Symbolleiste auf <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Bridge Stop</span> klicken.
+</p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Addon_RobustMCPBridge_statusbar.png&amp;filetimestamp=20260111011608&amp;.html" class="mw-file-description" title="Statusleiste des Arbeitsbereichs Robust MCP Bridge"><img alt="Statusleiste des Arbeitsbereichs Robust MCP Bridge" src="../File/Addon_RobustMCPBridge_statusbar.png" decoding="async" width="396" height="86" class="mw-file-element" data-file-width="396" data-file-height="86"></a></span>
 </p><p><span id="Headless_Mode"></span>
 </p>
 <h3><span class="mw-headline" id="Kopfloser_Modus">Kopfloser Modus</span></h3>
@@ -217,13 +214,13 @@
 <li><a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol</a> - Die Protokollspezifikation.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113201951
+Cached time: 20260113202041
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.038 seconds
-Real time usage: 0.051 seconds
-Preprocessor visited node count: 236/1000000
+CPU time usage: 0.043 seconds
+Real time usage: 0.057 seconds
+Preprocessor visited node count: 235/1000000
 Post&#8208;expand include size: 2245/2097152 bytes
 Template argument size: 748/2097152 bytes
 Highest expansion depth: 4/100
@@ -233,16 +230,16 @@ Unstrip post&#8208;expand size: 3285/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.384      1 -total
- 22.67%    2.127      4 Template:Code
- 15.69%    1.473      5 Template:Incode
- 14.51%    1.362      3 Template:Button
- 14.16%    1.329      1 Template:TOCright
- 11.83%    1.110      4 Template:MenuCommand
- 10.82%    1.015      3 Template:FileName
+100.00%   11.364      1 -total
+ 21.57%    2.451      4 Template:Code
+ 19.52%    2.218      5 Template:Incode
+ 14.08%    1.600      4 Template:MenuCommand
+ 12.34%    1.403      1 Template:TOCright
+ 11.32%    1.287      3 Template:Button
+ 10.79%    1.226      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113201951 and revision id 1738061. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113202041 and revision id 1738063. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
