--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Robust MCP Bridge Workbench/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Robust+MCP+Bridge+Workbench&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Robust_MCP_Bridge_Workbench.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Robust MCP Bridge Workbench (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Robust_MCP_Bridge_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Atelier Robust MCP Bridge (2% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li></ul></div>
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=FreecadRobustMCPBridge.svg&amp;filetimestamp=20260111060448&amp;.html" class="mw-file-description"><img src="../File/FreecadRobustMCPBridge.svg" decoding="async" width="128" height="128" class="mw-file-element" data-file-width="64" data-file-height="64"></a><figcaption>Symbol des Arbeitsbereichs Robust MCP Bridge</figcaption></figure>
@@ -7,10 +7,8 @@
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The <b>Robust MCP Bridge Workbench</b> provides the server-side connection point that provides a bridge to the <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP Server</a>, which enables external applications to control FreeCAD through the <a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol (MCP)</a>. The workbench runs inside FreeCAD and exposes XML-RPC and JSON-RPC interfaces that external MCP clients can connect to.
+<p>Der <b>Arbeitsbereich Robust MCP Bridge</b> stellt den serverseitigen Verbindungspunkt bereit, der eine Br&uuml;cke (engl. Bridge) zum <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP-Server</a> bildet, wodurch externe Anwendungen FreeCAD &uuml;ber das <a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol (MCP)</a> steuern k&ouml;nnen. Der Arbeitsbereich l&auml;uft innerhalb von FreeCAD und stellt XML-RPC- und JSON-RPC-Schnittstellen bereit, mit denen externe MCP-Clients eine Verbindung herstellen k&ouml;nnen.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>This workbench is designed to work with the <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP Server</a> (available on PyPI), which allows AI assistants like <a rel="nofollow" class="external text" href="https://claude.ai">Claude</a> to interact with FreeCAD through natural language. The full documentation and source code can be found at <a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">github/spkane/freecad-robust-mcp-and-more</a>, where you will find the MCP Server, Bridge and some MFreeCAD acros used for various things, not necessary related to AI or the MCP work.
 </p>
@@ -214,32 +212,32 @@
 <li><a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol</a> - Die Protokollspezifikation.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113202041
+Cached time: 20260114044412
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.043 seconds
-Real time usage: 0.057 seconds
-Preprocessor visited node count: 235/1000000
+CPU time usage: 0.036 seconds
+Real time usage: 0.072 seconds
+Preprocessor visited node count: 234/1000000
 Post&#8208;expand include size: 2245/2097152 bytes
 Template argument size: 748/2097152 bytes
 Highest expansion depth: 4/100
 Expensive parser function count: 4/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3285/5000000 bytes
+Unstrip post&#8208;expand size: 3286/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.364      1 -total
- 21.57%    2.451      4 Template:Code
- 19.52%    2.218      5 Template:Incode
- 14.08%    1.600      4 Template:MenuCommand
- 12.34%    1.403      1 Template:TOCright
- 11.32%    1.287      3 Template:Button
- 10.79%    1.226      3 Template:FileName
+100.00%   12.040      1 -total
+ 23.86%    2.873      4 Template:Code
+ 22.57%    2.718      4 Template:MenuCommand
+ 15.33%    1.846      5 Template:Incode
+ 14.68%    1.767      1 Template:TOCright
+  8.31%    1.001      3 Template:FileName
+  6.83%    0.822      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113202041 and revision id 1738063. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114044412 and revision id 1738065. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
