--- a/wiki/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/Robust_MCP_Bridge_Workbench.html
@@ -1,11 +1,12 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Robust MCP Bridge Workbench</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Robust+MCP+Bridge+Workbench&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
+<li><a href="de/Robust_MCP_Bridge_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Arbeitsbereich Robust MCP Bridge (71% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
 <li><a href="fr/Robust_MCP_Bridge_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Atelier Robust MCP Bridge (2% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li></ul></div>
 <figure typeof="mw:File/Thumb"><a href="index.php?title=FreecadRobustMCPBridge.svg&amp;filetimestamp=20260111060448&amp;.html" class="mw-file-description"><img src="File/FreecadRobustMCPBridge.svg" decoding="async" width="128" height="128" class="mw-file-element" data-file-width="64" data-file-height="64"></a><figcaption>Robust MCP Bridge Workbench icon</figcaption></figure>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>The <b>Robust MCP Bridge Workbench</b> provides the server-side connection point that provides a bridge to the <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP Server</a>, which enables external applications to control FreeCAD through the <a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol (MCP)</a>. The workbench runs inside FreeCAD and exposes XML-RPC and JSON-RPC interfaces that external MCP clients can connect to.
-</p><p>This workbench is designed to work with the <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP Server</a> (available on PyPI), which allows AI assistants like <a rel="nofollow" class="external text" href="https://claude.ai">Claude</a> to interact with FreeCAD through natural language. The full documentation and source code can be found at <a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">github/spkane/freecad-robust-mcp-and-more</a>, where you will find the MCP Server, Bridge and some MFreeCAD acros used for various things, not necessary related to AI or the MCP work.
+</p><p>This workbench is designed to work with the <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP Server</a> (available on PyPI), which allows AI assistants like <a rel="nofollow" class="external text" href="https://claude.ai">Claude</a> to interact with FreeCAD through natural language. The full documentation and source code can be found at <a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">github/spkane/freecad-robust-mcp-and-more</a>, where you will find the MCP Server, Bridge and some FreeCAD Macros used for various things, not necessary related to AI or the MCP work.
 </p><p><b>Key Features:</b>
 </p>
 <ul><li>Toolbar controls for starting/stopping the MCP bridge.</li>
@@ -160,32 +161,32 @@
 <li><a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol</a> - The protocol specification.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113122758
+Cached time: 20260114044545
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.060 seconds
-Real time usage: 0.064 seconds
+CPU time usage: 0.062 seconds
+Real time usage: 0.070 seconds
 Preprocessor visited node count: 253/1000000
 Post&#8208;expand include size: 2233/2097152 bytes
 Template argument size: 742/2097152 bytes
 Highest expansion depth: 4/100
 Expensive parser function count: 4/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3108/5000000 bytes
+Unstrip post&#8208;expand size: 3293/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.485      1 -total
- 27.27%    2.314      4 Template:Code
- 16.04%    1.361      1 Template:TOCright
- 14.51%    1.231      5 Template:Incode
- 11.23%    0.953      4 Template:MenuCommand
-  9.82%    0.833      3 Template:FileName
-  9.37%    0.795      3 Template:Button
+100.00%    9.441      1 -total
+ 24.12%    2.277      4 Template:Code
+ 17.47%    1.649      5 Template:Incode
+ 13.22%    1.248      3 Template:FileName
+ 12.40%    1.171      1 Template:TOCright
+ 11.45%    1.081      4 Template:MenuCommand
+  8.81%    0.832      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410040-0!canonical and timestamp 20260113122801 and revision id 1737832. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410040-0!canonical and timestamp 20260114044602 and revision id 1738066. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
