--- a/wiki/de/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/de/Macro_Cut_Object_For_Magnets.html
@@ -122,18 +122,16 @@ Macro Cut Object for Magnets
 <ol><li>Erstellt einen gro&szlig;en Halbraumkasten, der an der Schnittebene ausgerichtet ist.</li>
 <li>Teilt das Objekt mithilfe boolescher Verkn&uuml;pfungen in zwei Teile.</li>
 <li>Erstellt PartDesign::Body-Container f&uuml;r jede H&auml;lfte.</li></ol>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p><b>Hole Placement Algorithm:</b>
+<p><b>Algorithmus zur Lochplatzierung:</b>
 </p>
-<ol><li>Calculates hole positions evenly distributed along the cut face perimeter.</li>
-<li>For each position, validates against BOTH parts (not just one).</li>
-<li>Uses preferred clearance first, falls back to minimum if needed.</li>
-<li>Checks for hole-to-hole spacing (minimum 2x diameter).</li>
-<li>Repositions holes that fail safety checks using multiple strategies:
-<ul><li>Reduced clearance at same position.</li>
-<li>Increased inset from edge.</li>
-<li>Alternative positions along the perimeter.</li></ul></li></ol>
-</div>
+<ol><li>Berechnet die Positionen der L&ouml;cher, die gleichm&auml;&szlig;ig entlang des Schnittfl&auml;chenumfangs verteilt sind.</li>
+<li>F&uuml;r jede Position wird die G&uuml;ltigkeit f&uuml;r BEIDE Teile (nicht nur f&uuml;r eines) &uuml;berpr&uuml;ft.</li>
+<li>Verwendet zun&auml;chst den bevorzugten Abstand und weicht bei Bedarf auf den Mindestabstand aus.</li>
+<li>&Uuml;berpr&uuml;ft den Abstand zwischen den L&ouml;chern (mindestens 2x Durchmesser).</li>
+<li>Positioniert L&ouml;cher, die die Sicherheitspr&uuml;fungen nicht bestehen, mithilfe verschiedener Strategien neu:
+<ul><li>Verringerter Abstand an derselben Position.</li>
+<li>Vergr&ouml;&szlig;erter Abstand vom Rand.</li>
+<li>Alternative Positionen entlang des Umfangs.</li></ul></li></ol>
 <p><b>Sicherheitsmerkmale:</b>
 </p>
 <ul><li>Erstellt Testzylinder, um zu &uuml;berpr&uuml;fen, ob L&ouml;cher die W&auml;nde durchbrechen w&uuml;rden.</li>
@@ -241,13 +239,13 @@ Macro Cut Object for Magnets
 <li><a href="../de/PartDesign_Body.html" title="PartDesign Body/de">PartDesign K&ouml;rper</a> - Dokumentation zum K&ouml;rper-Container.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260114052636
+Cached time: 20260114052710
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.040 seconds
-Real time usage: 0.062 seconds
-Preprocessor visited node count: 155/1000000
+CPU time usage: 0.038 seconds
+Real time usage: 0.049 seconds
+Preprocessor visited node count: 154/1000000
 Post&#8208;expand include size: 3467/2097152 bytes
 Template argument size: 1355/2097152 bytes
 Highest expansion depth: 5/100
@@ -257,13 +255,13 @@ Unstrip post&#8208;expand size: 892/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.500      1 -total
- 44.69%    2.905      1 Template:Macro
- 26.82%    1.743      3 Template:FileName
- 24.42%    1.587      1 Template:CodeDownload
+100.00%    7.102      1 -total
+ 43.27%    3.073      1 Template:Macro
+ 26.67%    1.894      3 Template:FileName
+ 25.26%    1.794      1 Template:CodeDownload
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260114052636 and revision id 1738095. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260114052710 and revision id 1738097. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
